Mon Jun  5 19:12:13 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix internaltest again (due to further change in sleepylists) and
	  turn off network tests in apitest, which accidentally got turned
	  on.

Mon Jun  5 18:59:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Moved implementation of OmExpand::get_bits() out of the header file.

	* Use actual normalised length in SleepyTermList for calculating
	  weight.  Now produces same result as InMemoryTermList.

	* Test that an expand across a multidatabase produces same result as
	  an equivalent expand across a single database.  This test fails,
	  because normalised lengths are not shared across databases.  This is
	  part and parcel of the need to restructure the way expand is
	  performed, which will take some time to accomplish, so the test
	  is disabled for now.

Mon Jun  5 18:54:14 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added proof-of-concept Python bindings for OmStem (using SWIG).

Mon Jun  5 17:41:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Make sleepylist optionally store termfreqency information in
	  list.  Make sleepy_termlists not store termfrequency information:
	  it will get looked up in the database instead.

Mon Jun  5 16:35:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added apitest for correct wdf values in termlists (indirectly,
	  by performing an expand on two different relevant documents of
	  the same length, and comparing the weights for a common term).
	  Fails for sleepycat, as expected.

Mon Jun  5 16:12:19 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updated apitest's indexing to include keys, so the inmemory
	  tests now all work again.

Mon Jun  5 14:51:56 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* SleepyPostLists now use the document length when calculating weights.
